--- a/logged.html
+++ b/logged.html
@@ -97,8 +97,8 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
-    <script src="/scriptLogged.js"></script>
+    <script src="script.js"></script>
+    <script src="scriptLogged.js"></script>
 </body>
 
 </html>
