added toasts and some stuff

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <span>ARPA by <a href="https://wilson46.github.io/royalideas/">Royal Ideas</a></span>
     </div>
 
+    <div id="toastOK">Cambio realizado con exito</div>
+    <div id="toastNOT">Se produjo un error</div>
+    
 </body>
 
 </html>
