--- a/logged.html
+++ b/logged.html
@@ -51,7 +51,7 @@
             <a class="linkNoStyle" href="refugios.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-house"></i>
-                    <p class="menuText">Refugios</p>
+                    <p class="menuText biggerText">Refugios</p>
                 </div>
             </a>
             <div class="menuItem itemOnMobile">
@@ -93,10 +93,16 @@
                     <p class="statsText">Animales en ARPA <span id="count2" class="statsNumbers"></span></p>
                     <p class="statsText">Personas en ARPA <span id="count3" class="statsNumbers"></span></p>
                 </div>
+
             </div>
         </div>
-    </div>
 
+
+
+    </div>
+    
+    <div id="toastOK">Cambio realizado con exito</div>
+    <div id="toastNOT">Se produjo un error</div>
     <script src="script.js"></script>
     <script src="scriptLogged.js"></script>
 </body>
