--- a/refugios.html
+++ b/refugios.html
@@ -89,22 +89,20 @@
             <div class="realContent">
                 <p class="indicadorPagina">Refugios</p>
 
-
-
-                <label for="standard-select">Standard Select</label>
-                <div class="select">
-                  <select id="standard-select">
-                    <option value="Option 1">Option 1</option>
-                    <option value="Option 2">Option 2</option>
-                    <option value="Option 3">Option 3</option>
-                    <option value="Option 4">Option 4</option>
-                    <option value="Option 5">Option 5</option>
-                    <option value="Option length">Option that has too long of a value to fit</option>
-                  </select>
-                  <span class="focus"></span>
+                <div class="contenedorFiltros">
+                    <label for="standard-select">Standard Select</label>
+                    <div class="select">
+                      <select id="standard-select">
+                        <option value="Option 1">Option 1</option>
+                        <option value="Option 2">Option 2</option>
+                        <option value="Option 3">Option 3</option>
+                        <option value="Option 4">Option 4</option>
+                        <option value="Option 5">Option 5</option>
+                        <option value="Option length">Option that has too long of a value to fit</option>
+                      </select>
+                      <span class="focus"></span>
+                    </div>
                 </div>
-
-
 
                 <div class="contenedorTabla">
                     <table>
@@ -330,7 +328,10 @@
         </div>
     </div>
 
+    <div id="toastOK">Cambio realizado con exito</div>
+    <div id="toastNOT">Se produjo un error</div>
     <script src="script.js"></script>
+    
 </body>
 
 </html>
