--- a/refugios.html
+++ b/refugios.html
@@ -51,7 +51,7 @@
             <a class="linkNoStyle" href="refugios.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-house"></i>
-                    <p class="menuText">Refugios</p>
+                    <p class="menuText biggerText">Refugios</p>
                 </div>
             </a>
             <div class="menuItem itemOnMobile">
@@ -70,7 +70,7 @@
                 <i class="fa-solid fa-gear"></i>
                 <p class="menuText biggerText">Opciones</p>
             </div>
-            <a href="index.html">
+            <a class="linkNoStyle" href="index.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                     <p class="menuText biggerText">Salir</p>
@@ -90,18 +90,14 @@
                 <p class="indicadorPagina">Refugios</p>
 
                 <div class="contenedorFiltros">
-                    <label for="standard-select">Standard Select</label>
-                    <div class="select">
-                      <select id="standard-select">
-                        <option value="Option 1">Option 1</option>
-                        <option value="Option 2">Option 2</option>
-                        <option value="Option 3">Option 3</option>
-                        <option value="Option 4">Option 4</option>
-                        <option value="Option 5">Option 5</option>
-                        <option value="Option length">Option that has too long of a value to fit</option>
-                      </select>
-                      <span class="focus"></span>
+                    <div class="rh-dropdown">
+                        <select class="dropdown">
+                            <option>Styled Select</option>
+                            <option>Option</option>
+                            <option>Google fonts - is link</option>
+                        </select>
                     </div>
+
                 </div>
 
                 <div class="contenedorTabla">
@@ -331,7 +327,7 @@
     <div id="toastOK">Cambio realizado con exito</div>
     <div id="toastNOT">Se produjo un error</div>
     <script src="script.js"></script>
-    
+
 </body>
 
 </html>
