filters on mobile correctly

--- a/refugios.html
+++ b/refugios.html
@@ -87,9 +87,16 @@
                 <img class="userPic bps" src="images/avatar3.png" alt="profile image">
             </div>
             <div class="realContent">
+
+                <div class="togglerFilteringPosition">
+                    <div id="toggleF">
+                        <i class="fa-solid fa-gear gearToggle"></i>
+                    </div>
+                </div>
+                
                 <p class="indicadorPagina">Refugios</p>
 
-                <div class="contenedorFiltros">
+                <div id="contenedorFiltros" class="closedFiltering">
 
                     <div class="miniContainer">
                         <label for="filterName">Nombre</label>
@@ -113,7 +120,7 @@
                         </select>
                     </div>
                     <button class="botonFiltrar">Filtrar</button>
-                    
+
                 </div>
 
                 <div class="contenedorTabla">
@@ -132,6 +139,116 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
+                            <tr>
+                                <td scope="row" data-label="ID">####</td>
+                                <td data-label="Nombre">Refugio 4</td>
+                                <td data-label="Ciudad">Rosario</td>
+                                <td data-label="Dirección">calle falsa 123</td>
+                                <td data-label="Telefono">123456789</td>
+                                <td data-label="Email">ejemplo@dominio.com</td>
+                                <td data-label="Empleados">2</td>
+                                <td data-label="Animales">13/40</td>
+                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                            </tr>
                             <tr>
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
