--- a/refugios.html
+++ b/refugios.html
@@ -124,7 +124,7 @@
 
                 </div>
 
-                <div class="contenedorTabla">
+                <div id="tabConte" class="contenedorTabla">
                     <table>
                         <thead>
                             <tr>
