--- a/refugios.html
+++ b/refugios.html
@@ -120,7 +120,9 @@
                         </select>
                     </div>
 
-                        <button class="botonFiltrar">Filtrar</button>
+                        <button id="botonFiltrar" class="botonEnSelect">Filtrar</button>
+
+                        <button id="botonAddRefu" class="botonEnSelect">Agregar Refugio</button>
 
                 </div>
 
