--- a/logged.html
+++ b/logged.html
@@ -24,22 +24,30 @@
                     <p class="menuText">Refugios</p>
                 </div>
             </a>
-            <div class="menuItem">
-                <i class="fa-solid fa-dog"></i>
-                <p class="menuText">Mascotas</p>
-            </div>
-            <div class="menuItem">
-                <i class="fa-solid fa-person"></i>
-                <p class="menuText">Personas</p>
-            </div>
-            <div class="menuItem">
-                <i class="fa-solid fa-box-open"></i>
-                <p class="menuText">Depositos</p>
-            </div>
-            <div class="menuItem">
-                <i class="fa-solid fa-gear"></i>
-                <p class="menuText">Opciones</p>
-            </div>
+            <a class="linkNoStyle" href="mascotas.html">
+                <div class="menuItem">
+                    <i class="fa-solid fa-dog"></i>
+                    <p class="menuText">Mascotas</p>
+                </div>
+            </a>
+            <a class="linkNoStyle" href="personas.html">
+                <div class="menuItem">
+                    <i class="fa-solid fa-person"></i>
+                    <p class="menuText">Personas</p>
+                </div>
+            </a>
+            <a class="linkNoStyle" href="depositos.html">
+                <div class="menuItem">
+                    <i class="fa-solid fa-box-open"></i>
+                    <p class="menuText">Depositos</p>
+                </div>
+            </a>
+            <a class="linkNoStyle" href="depositos.html">
+                <div class="menuItem">
+                    <i class="fa-solid fa-circle-user"></i>
+                    <p class="menuText">Ajustes</p>
+                </div>
+            </a>
             <a class="linkNoStyle" href="index.html">
                 <div class="menuItem">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
@@ -54,22 +62,31 @@
                     <p class="menuText biggerText">Refugios</p>
                 </div>
             </a>
-            <div class="menuItem itemOnMobile">
-                <i class="fa-solid fa-dog"></i>
-                <p class="menuText biggerText">Mascotas</p>
-            </div>
-            <div class="menuItem itemOnMobile">
-                <i class="fa-solid fa-person"></i>
-                <p class="menuText biggerText">Personas</p>
-            </div>
-            <div class="menuItem itemOnMobile">
-                <i class="fa-solid fa-box-open"></i>
-                <p class="menuText biggerText">Depositos</p>
-            </div>
-            <div class="menuItem itemOnMobile">
-                <i class="fa-solid fa-gear"></i>
-                <p class="menuText biggerText">Opciones</p>
-            </div>
+            <a class="linkNoStyle" href="mascotas.html">
+
+                <div class="menuItem itemOnMobile">
+                    <i class="fa-solid fa-dog"></i>
+                    <p class="menuText biggerText">Mascotas</p>
+                </div>
+            </a>
+            <a class="linkNoStyle" href="personas.html">
+                <div class="menuItem itemOnMobile">
+                    <i class="fa-solid fa-person"></i>
+                    <p class="menuText biggerText">Personas</p>
+                </div>
+            </a>
+            <a class="linkNoStyle" href="depositos.html">
+                <div class="menuItem itemOnMobile">
+                    <i class="fa-solid fa-box-open"></i>
+                    <p class="menuText biggerText">Depositos</p>
+                </div>
+            </a>
+            <a class="linkNoStyle" href="depositos.html">
+                <div class="menuItem itemOnMobile">
+                    <i class="fa-solid fa-circle-user"></i>
+                    <p class="menuText">Ajustes</p>
+                </div>
+            </a>
             <a class="linkNoStyle" href="index.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
