--- a/mascotas.html
+++ b/mascotas.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
 
-                <p class="indicadorPagina">Refugios</p>
+                <p class="indicadorPagina">Mascotas</p>
 
                 <div id="contenedorFiltros" class="closedFiltering">
 
@@ -137,13 +137,13 @@
                         </select>
                     </div>
 
-                        <button id="botonFiltrarRefu" class="botonEnSelect">Filtrar</button>
+                    <button id="botonFiltrarMasco" class="botonEnSelect">Filtrar</button>
 
-                        <button id="botonAddRefu" class="botonEnSelect">Agregar Refugio</button>
+                    <button id="botonAddMasco" class="botonEnSelect">Agregar Mascota</button>
 
                 </div>
 
-                <div id="tabConteRefu" class="contenedorTabla">
+                <div id="tabConteMasco" class="contenedorTabla">
                     <table>
                         <thead>
                             <tr>
