--- a/personas.html
+++ b/personas.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
 
-                <p class="indicadorPagina">Refugios</p>
+                <p class="indicadorPagina">Personas</p>
 
                 <div id="contenedorFiltros" class="closedFiltering">
 
@@ -137,13 +137,13 @@
                         </select>
                     </div>
 
-                        <button id="botonFiltrarRefu" class="botonEnSelect">Filtrar</button>
+                        <button id="botonFiltrarPerso" class="botonEnSelect">Filtrar</button>
 
-                        <button id="botonAddRefu" class="botonEnSelect">Agregar Refugio</button>
+                        <button id="botonAddPerso" class="botonEnSelect">Agregar Refugio</button>
 
                 </div>
 
-                <div id="tabConteRefu" class="contenedorTabla">
+                <div id="tabContePerso" class="contenedorTabla">
                     <table>
                         <thead>
                             <tr>
