--- a/personas.html
+++ b/personas.html
@@ -139,7 +139,7 @@
 
                         <button id="botonFiltrarPerso" class="botonEnSelect">Filtrar</button>
 
-                        <button id="botonAddPerso" class="botonEnSelect">Agregar Refugio</button>
+                        <button id="botonAddPerso" class="botonEnSelect">Agregar Persona</button>
 
                 </div>
 
