--- a/mascotas.html
+++ b/mascotas.html
@@ -84,7 +84,7 @@
             <a class="linkNoStyle" href="depositos.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-circle-user"></i>
-                    <p class="menuText">Ajustes</p>
+                    <p class="menuText biggerText">Ajustes</p>
                 </div>
             </a>
             <a class="linkNoStyle" href="index.html">
