--- a/personas.html
+++ b/personas.html
@@ -42,7 +42,7 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="depositos.html">
+            <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem">
                     <i class="fa-solid fa-circle-user"></i>
                     <p class="menuText">Ajustes</p>
@@ -81,7 +81,7 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="depositos.html">
+            <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-circle-user"></i>
                     <p class="menuText biggerText">Ajustes</p>
@@ -116,27 +116,19 @@
                 <div id="contenedorFiltros" class="closedFiltering">
 
                     <div class="miniContainer">
-                        <label for="filterName">Nombre</label>
-                        <input type="text" id="filterName" name="filterName"
+                        <label for="filterNamePerso">Nombre</label>
+                        <input type="text" id="filterNamePerso" name="filterName"
                             placeholder="Ingrese un Nombre para buscar">
                     </div>
 
                     <div class="miniContainer">
-                        <label for="filterCity">Ciudad</label>
-                        <select id="filterCity" class="dropdown">
+                        <label for="filterCityPerso">Ciudad</label>
+                        <select id="filterCityPerso" class="dropdown">
                             <option>All</option>
                             <option>Rosario</option>
                         </select>
                     </div>
-                    <div class="miniContainer">
-                        <label for="filterCompletion">Refugio completo</label>
-                        <select id="filterCompletion" class="dropdown">
-                            <option>All</option>
-                            <option>Si</option>
-                            <option>No</option>
-                        </select>
-                    </div>
-
+                    
                     <button id="botonFiltrarPerso" class="botonEnSelect">Filtrar</button>
 
                     <button id="botonAddPerso" class="botonEnSelect">Agregar Persona</button>
@@ -153,8 +145,6 @@
                                 <th scope="col">Dirección</th>
                                 <th scope="col">Telefono</th>
                                 <th scope="col">Email</th>
-                                <th scope="col">Empleados</th>
-                                <th scope="col">Animales</th>
                                 <th scope="col">Detalles</th>
                             </tr>
                         </thead>
@@ -166,8 +156,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -177,8 +165,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -188,8 +174,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -199,8 +183,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -210,8 +192,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -221,8 +201,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -232,8 +210,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -243,8 +219,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -254,8 +228,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -265,8 +237,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -276,8 +246,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -287,8 +255,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -298,8 +264,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -309,8 +273,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -320,8 +282,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -331,8 +291,6 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
@@ -342,33 +300,8 @@
                                 <td data-label="Dirección">calle falsa 123</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">calle falsa 123</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-
 
                         </tbody>
                     </table>
