--- a/depositos.html
+++ b/depositos.html
@@ -81,7 +81,7 @@
                     <p class="menuText biggerText">Depositos</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="depositos.html">
+            <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem itemOnMobile">
                     <i class="fa-solid fa-circle-user"></i>
                     <p class="menuText biggerText">Ajustes</p>
@@ -104,12 +104,9 @@
                 <img class="userPic bps" src="images/avatar3.png" alt="profile image">
             </div>
             <div class="realContent">
-                <p class="indicadorPagina">Inicio</p>
-                <div class="arpaStats">
-                    <p class="statsText">Refugios en ARPA <span id="count1" class="statsNumbers"></span></p>
-                    <p class="statsText">Animales en ARPA <span id="count2" class="statsNumbers"></span></p>
-                    <p class="statsText">Personas en ARPA <span id="count3" class="statsNumbers"></span></p>
-                </div>
+                <p class="indicadorPagina">Depositos</p>
+                
+                
 
             </div>
         </div>
