--- a/refugios.html
+++ b/refugios.html
@@ -42,7 +42,7 @@
                     <p class="menuText">Depositos</p>
                 </div>
             </a>
-            <a class="linkNoStyle" href="depositos.html">
+            <a class="linkNoStyle" href="ajustes.html">
                 <div class="menuItem">
                     <i class="fa-solid fa-circle-user"></i>
                     <p class="menuText">Ajustes</p>
