--- a/recover.html
+++ b/recover.html
@@ -19,25 +19,24 @@
 
 <body>
 
-    <div class="granContenedor bps">
+    <div class="midContenedor bps">
 
         <div class="contenedorTitulo">
             <p class="tituloLog">
-                Iniciar sesión
+                Recuperar contraseña
             </p>
         </div>
         <p class="subtLog">
-            ¿No tiene una cuenta? <a href="register.html">Cree una</a>
+            Un email se enviara a su correo para recuperar su contraseña
         </p>
         <div class="contenedorInputs">
-            <input id="inputEmail" type="email" class="inputField" value placeholder="Email">
-            <input id="inputPass" type="password" class="inputField" value placeholder="Password">
+            <input id="inputEmailRecover" type="email" class="inputField" value placeholder="Email">
         </div>
-        <span class="subtLog2">
-            <a href="recover.html">Olvidó su contraseña?</a>
-        </span>
 
-        <a class="butLogINV" href="logged.html">Ingresar</a>
+        <div class="contenedorInputs3">
+            <a class="butLogINV spacer1" href="logged.html">Recuperar</a>
+            <a class="butLog spacer1" href="index.html">Cancelar</a>
+        </div>
 
     </div>
 
