boton en ajustes

--- a/ajustes.html
+++ b/ajustes.html
@@ -106,7 +106,20 @@
             <div class="realContent">
                 <p class="indicadorPagina">Ajustes</p>
                 
+                <div class="togglerFilteringPosition">
+                    <div id="toggleF">
+                        <i class="fa-solid fa-gear gearToggle"></i>
+                    </div>
+                </div>
+
+                <div id="contenedorFiltros" class="closedFiltering">                    
+
+                    <button id="botonEditUser" class="botonEnSelect">Editar Información</button>
+
+                </div>
+
                 
+
 
             </div>
         </div>
@@ -118,7 +131,6 @@
     <div id="toastOK">Cambio realizado con exito</div>
     <div id="toastNOT">Se produjo un error</div>
     <script src="script.js"></script>
-    <script src="scriptLogged.js"></script>
 </body>
 
 </html>
