--- a/ajustes.html
+++ b/ajustes.html
@@ -118,7 +118,11 @@
 
                 </div>
 
-                
+                <div class="mainviewAjustes">   
+                    <div class="ajustesCol1">qwe</div>
+                    <div class="ajustesCol2">asd</div>
+                    <div class="ajustesCol3">zxc</div>
+                </div>
 
 
             </div>
