--- a/recover.html
+++ b/recover.html
@@ -34,8 +34,8 @@
         </div>
 
         <div class="contenedorInputs3">
-            <a class="butLogINV spacer1" href="logged.html">Recuperar</a>
-            <a class="butLog spacer1" href="index.html">Cancelar</a>
+            <a class="butLog spacer1" href="logged.html">Recuperar</a>
+            <a class="butLog butLogINV spacer1" href="index.html">Cancelar</a>
         </div>
 
     </div>
