--- a/refugios.html
+++ b/refugios.html
@@ -137,9 +137,9 @@
                         </select>
                     </div>
 
-                    <button id="botonFiltrarRefu" class="botonEnSelect">Filtrar</button>
+                    <button id="botonFiltrarRefu" class="butLog butLogSelect">Filtrar</button>
 
-                    <button id="botonAddRefu" class="botonEnSelect">Agregar Refugio</button>
+                    <button id="botonAddRefu" class="butLog butLogSelect">Agregar Refugio</button>
 
                 </div>
 
