--- a/ajustes.html
+++ b/ajustes.html
@@ -114,7 +114,7 @@
 
                 <div id="contenedorFiltros" class="closedFiltering">
 
-                    <button id="botonEditUser" class="botonEnSelect">Editar Información</button>
+                    <button id="botonEditUser" class="butLog butLogSelect"">Editar Información</button>
 
                 </div>
 
@@ -132,13 +132,13 @@
                         </div>
                     </div>
                     <div class="ajustesCol2">
-                        <input id="inputApellido" type="text" class="inputField spacer1" placeholder="Apellido">
-                        <input id="inputNombre" type="text" class="inputField spacer1" placeholder="Nombre">
-                        <input id="inputDate" type="text" class="inputField spacer1" placeholder="Fecha de Nacimiento (dd/mm/aaaa)">
-                        <input id="inputDNI" type="text" class="inputField spacer1" placeholder="DNI">
-                        <input id="inputPhone" type="text" class="inputField spacer1" placeholder="Telefono">
-                        <input id="inputEmail" type="email" class="inputField spacer1" placeholder="Email">
-                        <input id="inputPass" type="password" class="inputField spacer1" placeholder="Password">
+                        <input id="inputAjustesApellido" type="text" class="inputField spacer1" placeholder="Apellido">
+                        <input id="inputAjustesNombre" type="text" class="inputField spacer1" placeholder="Nombre">
+                        <input id="inputAjustesDate" type="text" class="inputField spacer1" placeholder="Fecha de Nacimiento (dd/mm/aaaa)">
+                        <input id="inputAjustesDNI" type="text" class="inputField spacer1" placeholder="DNI">
+                        <input id="inputAjustesPhone" type="text" class="inputField spacer1" placeholder="Telefono">
+                        <input id="inputAjustesEmail" type="email" class="inputField spacer1" placeholder="Email">
+                        <input id="inputAjustesPass" type="password" class="inputField spacer1" placeholder="Password">
                     </div>
                     <div class="ajustesCol3">
                         
