--- a/register.html
+++ b/register.html
@@ -39,8 +39,8 @@
         </div>
 
         <div class="contenedorInputs3">
-            <a class="butLogINV spacer1" href="logged.html">Registrarse</a>
-            <a class="butLog spacer1" href="index.html">Cancelar</a>
+            <a class="butLog spacer1" href="logged.html">Registrarse</a>
+            <a class="butLog butLogINV spacer1" href="index.html">Cancelar</a>
         </div>
     </div>
 
